# gd-multiprofile-mod

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
src/layers/: EditProfileForm.hpp  NewProfileForm.hpp  ProfileList.hpp  ProfileNode.hpp  ProfileSelectorLayer.hpp
src/objects/: EditCallbackProtocol.hpp  ProfileObject.hpp
src/utils/: Game.hpp  Profiles.hpp
